Remove unsupported java 21 features